--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,18 +5,18 @@ on:
     tags:
       - "*.*"
       - "*.*.*"
-
   workflow_dispatch:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
       - name: Print version info
         id: semver
@@ -33,14 +33,16 @@ jobs:
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: 1gtm
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Run checks
         run: |
           make ci
 
       - name: Build
-        env:
-          DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          USERNAME: 1gtm
         run: |
-          docker login --username ${USERNAME} --password ${DOCKER_TOKEN}
-          make push
+          make release
